--- a/open-ui/angular.json
+++ b/open-ui/angular.json
@@ -28,6 +28,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeng/resources/themes/md-light-deeppurple/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
             ],
             "scripts": []
